--- a/client/src/scss/_color.scss
+++ b/client/src/scss/_color.scss
@@ -4,4 +4,5 @@
 $color-primary: #7e57c2;
 $color-secondary: #b085f5;
 $color-dark-background: #323232;
-$color-dark-background-paper: #424242;
+$color-dark-accent: #424242;
+$color-light-accent: rgba(0,0,0,.1);
